Bug 39882 - Regression: Plugging in a HDMI connector makes the LCD of X120e go dark
Summary: Regression: Plugging in a HDMI connector makes the LCD of X120e go dark
Status: RESOLVED FIXED
Alias: None
Product: DRI
Classification: Unclassified
Component: DRM/Radeon (show other bugs)
Version: XOrg git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Default DRI bug account
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-08-06 06:27 UTC by gottfried.haider
Modified: 2011-08-23 13:18 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
lspci of Lenovo X120e (1.95 KB, application/octet-stream)
2011-08-06 06:28 UTC, gottfried.haider
no flags Details
dmesg (nothing interesting after HDMI insertion) (64.67 KB, application/octet-stream)
2011-08-06 06:31 UTC, gottfried.haider
no flags Details
Xorg.log (HDMI insertion happened just before 906.688) (48.31 KB, application/x-trash)
2011-08-06 06:33 UTC, gottfried.haider
no flags Details
fix (3.87 KB, patch)
2011-08-13 10:28 UTC, Alex Deucher
no flags Details | Splinter Review

Description gottfried.haider 2011-08-06 06:27:10 UTC
When I plug in my external TFT monitor while my X120e is in use, the laptop's internal LCD immediately goes dark - yet I don't have a picture on the TFT.

I first noticed this with kernel 3.0.0, this is fully reproducible also on 3.0.1. Since I did not remember this happening before, I tested with an older kernel (Ubuntu's 2.6.38, but should not make a difference), and indeed: with 2.6.38 the internal LCD stays on (which is the expected behavior).

The TFT is connected via a HDMI-to-DVI cable. Userspace is Xubuntu 11.04 with xorg-edgers PPA.

At a first glance, I do not see anything interesting in either dmesg or Xorg.log when this happens. Note: the machine does not hang, since I can still (blindly) launch a terminal and make the machine restart - for which I briefly get a picture on the LCD again after XOrg shutdown.

I am attaching lspci and a dmesg/Xorg.log below - please let me know if I can help with anything else (I can easily test kernel patches).
Comment 1 gottfried.haider 2011-08-06 06:28:25 UTC
Created attachment 49992 [details]
lspci of Lenovo X120e
Comment 2 gottfried.haider 2011-08-06 06:31:57 UTC
Created attachment 49993 [details]
dmesg (nothing interesting after HDMI insertion)
Comment 3 gottfried.haider 2011-08-06 06:33:29 UTC
Created attachment 49994 [details]
Xorg.log (HDMI insertion happened just before 906.688)
Comment 4 Alex Deucher 2011-08-06 07:27:46 UTC
Can you bisect?  If I had to guess, it's probably one of the display rework patches added in 3.0.  Does a VT switch help?
Comment 5 gottfried.haider 2011-08-06 12:26:19 UTC
Sorry, I tried bisecting, but defconfig does not boot here.. and my normal config takes ages for a full rebuild.
Comment 6 gottfried.haider 2011-08-10 17:03:12 UTC
Regarding VT switching: When I press Ctrl+Alt+F1 after plugging in I do get a picture again on the internal LCD.. when I then press Ctrl+Alt+F7 I am even properly back in X.

Thanks
Comment 7 Alex Deucher 2011-08-12 14:45:34 UTC
It's a bad interaction between modesetting and hotplug.  I'm working on a patch.
Comment 8 Alex Deucher 2011-08-13 10:28:00 UTC
Created attachment 50185 [details] [review]
fix

This patch fixes the issue.
Comment 9 Alex Deucher 2011-08-17 11:21:36 UTC
The patch works for me.  If you still have issues, please reopen.
Comment 10 gottfried.haider 2011-08-19 18:31:55 UTC
Sorry that it took a bit long, but I confirm this as being fixed. (Thanks!)
Comment 11 Florian Mickler 2011-08-23 13:18:55 UTC
A patch referencing this bug report has been merged in Linux v3.1-rc3:

commit d5811e8731213f80c80d89e980505052f16aca1c
Author: Alex Deucher <alexander.deucher@amd.com>
Date:   Sat Aug 13 13:36:13 2011 -0400

    drm/radeon/kms: don't try to be smart in the hpd handler


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.